tests/invalid/runtime/list_index_oob.pts
function main() : void {
    list<int> values = [1, 2, 3];
    int x = values[10];
    Sys.print(x.toString());
}
